--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -90,6 +90,10 @@ form.bp input.text:focus, form.bp input.title:focus, form.bp textarea:focus, for
 form.bp input.text, form.bp input.title { width: 300px; }
 form.bp textarea { width: 390px; height: 250px; }
 
+body.one-col h1, body.one-col h2 { margin-bottom: .25em; }
+body.one-col .infoTable tr { line-height: 1em; text-align: left; }
+body.one-col .infoTable tr th { font-weight: bold; width: 20%; }
+body.one-col .infoTable tr td.comments { font-style: oblique; font-size: 85%; }
 body.one-col #container { width: 950px; margin: 0 auto; overflow: hidden; display: inline-block; }
 body.one-col #container { display: block; }
 body.one-col #container #header { display: inline; float: left; margin-right: 10px; width: 950px; position: relative; }
@@ -104,8 +108,8 @@ body.one-col #container #header #header_links a { text-decoration: none; }
 body.one-col #container #header #header_links a:hover { text-decoration: underline; }
 body.one-col #container #content #summary_row_1 { display: inline; float: left; margin-right: 0; width: 950px; }
 * html body.one-col #container #content #summary_row_1 { overflow-x: hidden; }
-body.one-col #container #content #summary_row_1 #character_attributes { display: inline; float: left; margin-right: 10px; width: 310px; }
-* html body.one-col #container #content #summary_row_1 #character_attributes { overflow-x: hidden; }
+body.one-col #container #content #summary_row_1 #character_info { display: inline; float: left; margin-right: 10px; width: 310px; }
+* html body.one-col #container #content #summary_row_1 #character_info { overflow-x: hidden; }
 body.one-col #container #content #summary_row_1 #abilities_summary { display: inline; float: left; margin-right: 10px; width: 310px; }
 * html body.one-col #container #content #summary_row_1 #abilities_summary { overflow-x: hidden; }
 body.one-col #container #content #summary_row_1 #combat_summary { display: inline; float: left; margin-right: 0; width: 310px; }
