--- a/public/stylesheets/compiled/styles.css
+++ b/public/stylesheets/compiled/styles.css
@@ -1,6 +1,13 @@
-.fieldWithErrors { padding: 2px; background-color: red; display: table; }
+#flash_notice, #flash_error { padding: 5px 8px; margin: 10px 0; }
 
-#errorExplanation { width: 400px; border: 2px solid red; padding: 7px; padding-bottom: 12px; margin-bottom: 20px; background-color: #f0f0f0; }
-#errorExplanation h2 { text-align: left; font-weight: bold; padding: 5px 5px 5px 15px; font-size: 12px; margin: -7px; background-color: #c00; color: #fff; }
-#errorExplanation p { color: #333; margin-bottom: 0; padding: 5px; }
-#errorExplanation ul li { font-size: 12px; list-style: square; }
+#flash_notice { background-color: #CFC; border: solid 1px #6C6; }
+
+#flash_error { background-color: #FCC; border: solid 1px #C66; }
+
+.fieldWithErrors { display: inline; }
+
+#errorExplanation { width: 400px; border: 2px solid #CF0000; padding: 0; padding-bottom: 12px; margin-bottom: 20px; background-color: #f0f0f0; }
+#errorExplanation h2 { text-align: left; padding: 5px 5px 5px 15px; margin: 0; font-weight: bold; font-size: 12px; background-color: #c00; color: #fff; }
+#errorExplanation p { color: #333; margin-bottom: 0; padding: 8px; }
+#errorExplanation ul { margin: 2px 24px; }
+#errorExplanation ul li { font-size: 12px; list-style: disc; }
