cleanup of activerecord operations in character controller to properly scope through user

--- a/app/views/characters/new.html.haml
+++ b/app/views/characters/new.html.haml
@@ -1,5 +1,5 @@
 %h2 New character
 
-= render :partial => "form", :locals => {:action_label => "Create"}
+%p Coming soon...
 
 = link_to 'Back', characters_path
