--- a/app/views/characters/show.html.haml
+++ b/app/views/characters/show.html.haml
@@ -15,28 +15,28 @@
           %td Unknown
       %tr
         %th Hair:
-        %td= h(@character.hair_color)
+        %td= in_place_editor_field :character, "hair_color"
       %tr
         %th Eyes:
-        %td= h(@character.eye_color)
+        %td= in_place_editor_field :character, "eye_color"
       %tr
         %th Skin:
-        %td= h(@character.skin_color)
+        %td= in_place_editor_field :character, "skin_color"
       %tr
         %th Sex:
-        %td= h(@character.gender)
+        %td= in_place_editor_field :character, "gender"
       %tr
         %th Age:
-        %td= h(@character.age)
+        %td= in_place_editor_field :character, "age"
       %tr
         %th Height:
-        %td= h(@character.height)
+        %td= in_place_editor_field :character, "height"
       %tr
         %th Weight:
-        %td= h(@character.weight)
+        %td= in_place_editor_field :character, "weight"
       %tr
         %th Homeland:
-        %td= h(@character.homeland)
+        %td= in_place_editor_field :character, "homeland"
       %tr
         %th XP:
         %td 73,845
