--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,8 +1,11 @@
-!!! XML
-!!!
-%html
+!!! Strict
+%html{html_attrs}
   %head
-    %title= @browser_title || 'AEther: Arcana Evolved Character Editor'
+    %title
+      = h(yield(:title) || "AEther: Arcana Evolved Character Editor")
+    %meta{"http-equiv"=>"Content-Type", :content=>"text/html; charset=utf-8"}
+    
+    = javascript_include_tag :defaults
 
     = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
     = stylesheet_link_tag 'compiled/print.css', :media => 'print'
@@ -25,6 +28,8 @@
             %li{:class => "last"}= link_to "Logout", user_session_path, :method => :delete, :confirm => "Are you sure?"
 
       #content
+        - flash.each do |name, msg|
+          = content_tag :div, msg, :id => "flash_#{name}"
         = yield
 
       #footer
