add xp as char attribute

--- a/app/views/characters/show.html.haml
+++ b/app/views/characters/show.html.haml
@@ -15,31 +15,31 @@
           %td Unknown
       %tr
         %th Hair:
-        %td= in_place_editor_field :character, "hair_color"
+        %td= in_place_editor_field :character, :hair_color
       %tr
         %th Eyes:
-        %td= in_place_editor_field :character, "eye_color"
+        %td= in_place_editor_field :character, :eye_color
       %tr
         %th Skin:
-        %td= in_place_editor_field :character, "skin_color"
+        %td= in_place_editor_field :character, :skin_color
       %tr
         %th Sex:
-        %td= in_place_editor_field :character, "gender"
+        %td= in_place_editor_field :character, :gender
       %tr
         %th Age:
-        %td= in_place_editor_field :character, "age"
+        %td= in_place_editor_field :character, :age
       %tr
         %th Height:
-        %td= in_place_editor_field :character, "height"
+        %td= in_place_editor_field :character, :height
       %tr
         %th Weight:
-        %td= in_place_editor_field :character, "weight"
+        %td= in_place_editor_field :character, :weight
       %tr
         %th Homeland:
-        %td= in_place_editor_field :character, "homeland"
+        %td= in_place_editor_field :character, :homeland
       %tr
         %th XP:
-        %td 73,845
+        %td= in_place_editor_field :character, :xp
 
   #abilities_summary
     %h2 Abilities
