--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
       = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
 
     = stylesheet_link_tag 'compiled/styles.css'
-  %body{ :class => "bp one-col" }
+  %body{ :class => "bp no-sidebar" }
     #container
       #header
         %h1
