--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -90,60 +90,71 @@ form.bp input.text:focus, form.bp input.title:focus, form.bp textarea:focus, for
 form.bp input.text, form.bp input.title { width: 300px; }
 form.bp textarea { width: 390px; height: 250px; }
 
-body.one-col h1, body.one-col h2 { margin-bottom: .25em; }
-body.one-col .infoTable tr { line-height: 1em; text-align: left; }
-body.one-col .infoTable tr th { font-weight: bold; width: 20%; }
-body.one-col .infoTable tr td.comments { font-style: oblique; font-size: 85%; }
-body.one-col #container { width: 950px; margin: 0 auto; overflow: hidden; display: inline-block; }
-body.one-col #container { display: block; }
-body.one-col #container #header { display: inline; float: left; margin-right: 10px; width: 950px; position: relative; }
-* html body.one-col #container #header { overflow-x: hidden; }
-body.one-col #container #header h1 { text-indent: -9999em; overflow: hidden; background-image: url('/images/header-logo.png?1251407817'); background-repeat: no-repeat; background-position: 50% 50%; width: 484px; height: 32px; margin-top: 18px; }
-body.one-col #container #header #header_links { margin: 0; padding: 0; border: 0; outline: 0; overflow: hidden; display: inline-block; position: absolute; top: 2em; right: 0px; }
-body.one-col #container #header #header_links { display: block; }
-body.one-col #container #header #header_links li { list-style-type: none; margin-left: 0px; white-space: nowrap; display: inline; float: left; padding-left: 4px; padding-right: 4px; }
-body.one-col #container #header #header_links li.first { padding-left: 0px; }
-body.one-col #container #header #header_links li.last { padding-right: 0px; }
-body.one-col #container #header #header_links a { text-decoration: none; }
-body.one-col #container #header #header_links a:hover { text-decoration: underline; }
-body.one-col #container #content #summary_row_1 { display: inline; float: left; margin-right: 0; width: 950px; }
-* html body.one-col #container #content #summary_row_1 { overflow-x: hidden; }
-body.one-col #container #content #summary_row_1 #character_info { display: inline; float: left; margin-right: 10px; width: 310px; }
-* html body.one-col #container #content #summary_row_1 #character_info { overflow-x: hidden; }
-body.one-col #container #content #summary_row_1 #abilities_summary { display: inline; float: left; margin-right: 10px; width: 310px; }
-* html body.one-col #container #content #summary_row_1 #abilities_summary { overflow-x: hidden; }
-body.one-col #container #content #summary_row_1 #combat_summary { display: inline; float: left; margin-right: 0; width: 310px; }
-* html body.one-col #container #content #summary_row_1 #combat_summary { overflow-x: hidden; }
-body.one-col #container #content #summary_row_2 { display: inline; float: left; margin-right: 0; width: 950px; }
-* html body.one-col #container #content #summary_row_2 { overflow-x: hidden; }
-body.one-col #container #content #summary_row_2 #health_summary { display: inline; float: left; margin-right: 10px; width: 310px; }
-* html body.one-col #container #content #summary_row_2 #health_summary { overflow-x: hidden; }
-body.one-col #container #content #summary_row_2 #magic_summary { display: inline; float: left; margin-right: 10px; width: 310px; }
-* html body.one-col #container #content #summary_row_2 #magic_summary { overflow-x: hidden; }
-body.one-col #container #content #summary_row_2 #movement_summary { display: inline; float: left; margin-right: 0; width: 310px; }
-* html body.one-col #container #content #summary_row_2 #movement_summary { overflow-x: hidden; }
-body.one-col #container #content #summary_row_3 { display: inline; float: left; margin-right: 0; width: 950px; }
-* html body.one-col #container #content #summary_row_3 { overflow-x: hidden; }
-body.one-col #container #content #summary_row_3 #saves_summary { display: inline; float: left; margin-right: 10px; width: 310px; }
-* html body.one-col #container #content #summary_row_3 #saves_summary { overflow-x: hidden; }
-body.one-col #container #content #summary_row_3 #top_skills { display: inline; float: left; margin-right: 10px; width: 310px; }
-* html body.one-col #container #content #summary_row_3 #top_skills { overflow-x: hidden; }
-body.one-col #container #content #summary_row_3 #favorite_feats { display: inline; float: left; margin-right: 0; width: 310px; }
-* html body.one-col #container #content #summary_row_3 #favorite_feats { overflow-x: hidden; }
-body.one-col #container #content #actions { display: inline; float: left; margin-right: 0; width: 950px; margin: 0; padding: 0; border: 0; outline: 0; overflow: hidden; display: inline-block; }
-* html body.one-col #container #content #actions { overflow-x: hidden; }
-body.one-col #container #content #actions { display: block; }
-body.one-col #container #content #actions li { list-style-type: none; margin-left: 0px; white-space: nowrap; display: inline; float: left; padding-left: 4px; padding-right: 4px; }
-body.one-col #container #content #actions li.first { padding-left: 0px; }
-body.one-col #container #content #actions li.last { padding-right: 0px; }
-body.one-col #container #content #actions a { text-decoration: none; }
-body.one-col #container #content #actions a:hover { text-decoration: underline; }
-body.one-col #container #footer { display: inline; float: left; margin-right: 0; width: 950px; margin-top: 20px; }
-* html body.one-col #container #footer { overflow-x: hidden; }
-body.one-col #container #footer #footer_links { margin: 0; padding: 0; border: 0; outline: 0; overflow: hidden; display: inline-block; }
-body.one-col #container #footer #footer_links { display: block; }
-body.one-col #container #footer #footer_links li { list-style-type: none; margin-left: 0px; white-space: nowrap; display: inline; float: left; padding-left: 4px; padding-right: 4px; }
-body.one-col #container #footer #footer_links li.first { padding-left: 0px; }
-body.one-col #container #footer #footer_links li.last { padding-right: 0px; }
-body.one-col #container #footer #footer_links a { text-decoration: none; }
-body.one-col #container #footer #footer_links a:hover { text-decoration: underline; }
+body.no-sidebar h1, body.no-sidebar h2 { margin-bottom: .25em; }
+body.no-sidebar .infoTable { width: 100%; }
+body.no-sidebar .infoTable tr { line-height: 1em; text-align: left; }
+body.no-sidebar .infoTable tr th { font-weight: bold; width: 20%; }
+body.no-sidebar .infoTable tr td.comments { font-style: oblique; font-size: 85%; width: 50%; }
+body.no-sidebar #container { width: 950px; margin: 0 auto; overflow: hidden; display: inline-block; }
+body.no-sidebar #container { display: block; }
+body.no-sidebar #container #header { display: inline; float: left; margin-right: 10px; width: 950px; position: relative; }
+* html body.no-sidebar #container #header { overflow-x: hidden; }
+body.no-sidebar #container #header h1 { text-indent: -9999em; overflow: hidden; background-image: url('/images/header-logo.png?1251407817'); background-repeat: no-repeat; background-position: 50% 50%; width: 484px; height: 32px; margin-top: 18px; }
+body.no-sidebar #container #header #header_links { margin: 0; padding: 0; border: 0; outline: 0; overflow: hidden; display: inline-block; position: absolute; top: 2em; right: 0px; }
+body.no-sidebar #container #header #header_links { display: block; }
+body.no-sidebar #container #header #header_links li { list-style-type: none; margin-left: 0px; white-space: nowrap; display: inline; float: left; padding-left: 4px; padding-right: 4px; }
+body.no-sidebar #container #header #header_links li.first { padding-left: 0px; }
+body.no-sidebar #container #header #header_links li.last { padding-right: 0px; }
+body.no-sidebar #container #header #header_links a { text-decoration: none; }
+body.no-sidebar #container #header #header_links a:hover { text-decoration: underline; }
+body.no-sidebar #container #content #summary_row_1 { display: inline; float: left; margin-right: 0; width: 950px; }
+* html body.no-sidebar #container #content #summary_row_1 { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_1 #character_attributes_1 { display: inline; float: left; margin-right: 10px; width: 230px; }
+* html body.no-sidebar #container #content #summary_row_1 #character_attributes_1 { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_1 #character_attributes_2 { display: inline; float: left; margin-right: 10px; width: 230px; }
+* html body.no-sidebar #container #content #summary_row_1 #character_attributes_2 { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_1 #character_attributes_3 { display: inline; float: left; margin-right: 10px; width: 230px; }
+* html body.no-sidebar #container #content #summary_row_1 #character_attributes_3 { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_1 #character_attributes_4 { display: inline; float: left; margin-right: 0; width: 230px; }
+* html body.no-sidebar #container #content #summary_row_1 #character_attributes_4 { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_2 { display: inline; float: left; margin-right: 0; width: 950px; }
+* html body.no-sidebar #container #content #summary_row_2 { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_2 #abilities_summary { display: inline; float: left; margin-right: 10px; width: 230px; }
+* html body.no-sidebar #container #content #summary_row_2 #abilities_summary { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_2 #health_summary { display: inline; float: left; margin-right: 10px; width: 230px; }
+* html body.no-sidebar #container #content #summary_row_2 #health_summary { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_2 #movement_summary { display: inline; float: left; margin-right: 10px; width: 230px; }
+* html body.no-sidebar #container #content #summary_row_2 #movement_summary { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_2 #saves_summary { display: inline; float: left; margin-right: 0; width: 230px; }
+* html body.no-sidebar #container #content #summary_row_2 #saves_summary { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_3 { display: inline; float: left; margin-right: 0; width: 950px; }
+* html body.no-sidebar #container #content #summary_row_3 { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_3 #combat_summary { display: inline; float: left; margin-right: 10px; width: 470px; }
+* html body.no-sidebar #container #content #summary_row_3 #combat_summary { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_3 #magic_summary { display: inline; float: left; margin-right: 0; width: 470px; }
+* html body.no-sidebar #container #content #summary_row_3 #magic_summary { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_4 { display: inline; float: left; margin-right: 0; width: 950px; }
+* html body.no-sidebar #container #content #summary_row_4 { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_4 #top_items { display: inline; float: left; margin-right: 10px; width: 470px; }
+* html body.no-sidebar #container #content #summary_row_4 #top_items { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_4 #top_skills { display: inline; float: left; margin-right: 10px; width: 230px; }
+* html body.no-sidebar #container #content #summary_row_4 #top_skills { overflow-x: hidden; }
+body.no-sidebar #container #content #summary_row_4 #top_feats { display: inline; float: left; margin-right: 0; width: 230px; }
+* html body.no-sidebar #container #content #summary_row_4 #top_feats { overflow-x: hidden; }
+body.no-sidebar #container #content #actions { display: inline; float: left; margin-right: 0; width: 950px; margin: 0; padding: 0; border: 0; outline: 0; overflow: hidden; display: inline-block; }
+* html body.no-sidebar #container #content #actions { overflow-x: hidden; }
+body.no-sidebar #container #content #actions { display: block; }
+body.no-sidebar #container #content #actions li { list-style-type: none; margin-left: 0px; white-space: nowrap; display: inline; float: left; padding-left: 4px; padding-right: 4px; }
+body.no-sidebar #container #content #actions li.first { padding-left: 0px; }
+body.no-sidebar #container #content #actions li.last { padding-right: 0px; }
+body.no-sidebar #container #content #actions a { text-decoration: none; }
+body.no-sidebar #container #content #actions a:hover { text-decoration: underline; }
+body.no-sidebar #container #footer { display: inline; float: left; margin-right: 0; width: 950px; margin-top: 20px; }
+* html body.no-sidebar #container #footer { overflow-x: hidden; }
+body.no-sidebar #container #footer #footer_links { margin: 0; padding: 0; border: 0; outline: 0; overflow: hidden; display: inline-block; }
+body.no-sidebar #container #footer #footer_links { display: block; }
+body.no-sidebar #container #footer #footer_links li { list-style-type: none; margin-left: 0px; white-space: nowrap; display: inline; float: left; padding-left: 4px; padding-right: 4px; }
+body.no-sidebar #container #footer #footer_links li.first { padding-left: 0px; }
+body.no-sidebar #container #footer #footer_links li.last { padding-right: 0px; }
+body.no-sidebar #container #footer #footer_links a { text-decoration: none; }
+body.no-sidebar #container #footer #footer_links a:hover { text-decoration: underline; }
