updated row 2 and 3 of home screen to not use bullet lists

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -31,7 +31,10 @@ body.no-sidebar
 
       th
         :font-weight bold
-        :width 20%
+
+      td.total
+        :font-weight bold
+        :font-size 110%
 
       td.comments
         :font-style oblique
