--- a/app/views/characters/_abilities.html.haml
+++ b/app/views/characters/_abilities.html.haml
@@ -8,31 +8,31 @@
       %th Comments
     %tr
       %th STR:
-      %td 20
-      %td +5
+      %td.numeric 20
+      %td.numeric +5
       %td.comments
     %tr
       %th DEX:
-      %td 15
-      %td +2
+      %td.numeric 15
+      %td.numeric +2
       %td.comments -2 Temporary Damage
     %tr
       %th CON:
-      %td 17
-      %td +3
+      %td.numeric 17
+      %td.numeric +3
       %td.comments
     %tr
       %th INT:
-      %td 8
-      %td -1
+      %td.numeric 8
+      %td.numeric -1
       %td.comments
     %tr
       %th WIS:
-      %td 14
-      %td +2
+      %td.numeric 14
+      %td.numeric +2
       %td.comments
     %tr
       %th CHA:
-      %td 8
-      %td -1
+      %td.numeric 8
+      %td.numeric -1
       %td.comments
