--- a/app/views/characters/_combat.html.haml
+++ b/app/views/characters/_combat.html.haml
@@ -5,24 +5,24 @@
       %th Attack
       %th Bonus
       %th Damage
-      %th Critical Hit
+      %th Crit
       %th Comments
     %tr
       %th Melee:
-      %td +20/+15/+10
-      %td 2d6 + 12
-      %td 17-20x2
+      %td.nowrap +20/+15/+10
+      %td.nowrap 2d6 + 12
+      %td.nowrap 17-20 x2
       %td.comments
     %tr
       %th Ranged:
-      %td +13/+8/+3
-      %td 1d8 + 5
-      %td x3
+      %td.nowrap +13/+8/+3
+      %td.nowrap 1d8 + 5
+      %td.nowrap x3
       %td.comments target -1 armor bonus
 
   %table.infoTable
     %tr
-      %th Armor Class
+      %th{ :width => "25%" } Armor Class
       %th Base
       %th Flat Footed
       %th Touch
