--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -94,7 +94,9 @@ body.no-sidebar h1, body.no-sidebar h2 { margin-bottom: .25em; }
 body.no-sidebar .infoTable { width: 100%; }
 body.no-sidebar .infoTable tr { line-height: 1em; text-align: left; }
 body.no-sidebar .infoTable tr th { font-weight: bold; }
-body.no-sidebar .infoTable tr td.total { font-weight: bold; font-size: 110%; }
+body.no-sidebar .infoTable tr td.nobreak { white-space: nowrap; }
+body.no-sidebar .infoTable tr td.numeric { text-align: right; }
+body.no-sidebar .infoTable tr td.total { font-weight: bold; text-align: right; font-size: 110%; }
 body.no-sidebar .infoTable tr td.comments { font-style: oblique; font-size: 85%; width: 50%; }
 body.no-sidebar #container { width: 950px; margin: 0 auto; overflow: hidden; display: inline-block; }
 body.no-sidebar #container { display: block; }
